[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mossify"
version = "0.1.5"
description = "🌿 Mossify – A simple, organic framework for FastAPI + SQLModel with automatic CRUD and intelligent caching."
readme = "README.md"
authors = [
    {name = "Luiz Gabriel Magalhães Trindade", email = "luiz.gabriel.m.trindade@gmail.com"}
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.9"
dependencies = [
    "diskcache>=5.6.3",
    "fastapi>=0.100.0",
    "passlib[bcrypt]>=1.7.4",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.20",
    "sqlmodel>=0.0.14",
    "uvicorn>=0.23.0",
]

[project.urls]
Homepage = "https://github.com/seu-usuario/mossify"
Repository = "https://github.com/seu-usuario/mossify"

[tool.uv]
[dependency-groups]
dev = ["pytest>=7.0"]

[project.scripts]
mossify = "mossify.cli:main"
